--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <div class="row justify-content-center">
                             <h2 class="text-uppercase">수영</h2>
                                     <p class="item-intro text-muted">Swimming</p>
-                                    <div class="row">
+                                    <div class="row" id="hashtag1">
                                         <div class="col align-items-center my-3 my-lg-0">
                                             <div class="hashtag">#고강도</div>
                                             <div class="hashtag">#유산소</div>
@@ -346,7 +346,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">테니스</h2>
                             <p class="item-intro text-muted">Tennis</p>
-                            <div class="row">
+                            <div class="row" id="hashtag2">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#고강도</div>
                                     <div class="hashtag">#유산소</div>
@@ -411,7 +411,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">골프</h2>
                             <p class="item-intro text-muted">Golf</p>
-                            <div class="row">
+                            <div class="row" id="hashtag3">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#저강도</div>
                                     <div class="hashtag">#심리기술</div>
@@ -469,7 +469,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">복싱</h2>
                             <p class="item-intro text-muted">Boxing</p>
-                            <div class="row">
+                            <div class="row" id="hashtag4">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#고강도</div>
                                     <div class="hashtag">#근력강화</div>
@@ -541,7 +541,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">축구</h2>
                             <p class="item-intro text-muted">Soccer</p>
-                            <div class="row">
+                            <div class="row" id="hashtag5">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#고강도</div>
                                     <div class="hashtag">#근력강화</div>
@@ -596,7 +596,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">클라이밍</h2>
                             <p class="item-intro text-muted">Climbing</p>
-                            <div class="row">
+                            <div class="row" id="hashtag6">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#고강도</div>
                                     <div class="hashtag">#근력강화</div>
@@ -666,7 +666,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">필라테스</h2>
                             <p class="item-intro text-muted">Pilates</p>
-                            <div class="row">
+                            <div class="row" id="hashtag7">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#중강도</div>
                                     <div class="hashtag">#근력강화</div>
@@ -733,7 +733,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">크로스핏</h2>
                             <p class="item-intro text-muted">Crossfit</p>
-                            <div class="row">
+                            <div class="row" id="hashtag8">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#고강도</div>
                                     <div class="hashtag">#유산소</div>
@@ -798,7 +798,7 @@
                             <!-- Project details-->
                             <h2 class="text-uppercase">요가</h2>
                             <p class="item-intro text-muted">Yoga</p>
-                            <div class="row">
+                            <div class="row" id="hashtag9">
                                 <div class="col align-items-center my-3 my-lg-0">
                                     <div class="hashtag">#고강도</div>
                                     <div class="hashtag">#유연성</div>
@@ -836,7 +836,7 @@
                            
                                     <h3> 이런 분들에게 안 좋을 수 있어요</h3>
                                      <p>척추측만증을 앓고 있는 분들은 허리를 깊이 구부리는 자세와 반대로 코브라 자세같이 허리를 등쪽으로 많이 펴는 동작을 할 때 안좋을 수 있어요. 
-                                        누와서 손과 발을 올려서 몸을 알파벳 U자로 만드는 휠자세도 비대칭적인 척추측만증 환자에게 무리가 오기 때문에 피하세요. </p>
+                                        누워서 손과 발을 올려서 몸을 알파벳 U자로 만드는 휠자세도 비대칭적인 척추측만증 환자에게 무리가 오기 때문에 피하세요. </p>
                                     <h3>주변 시설 보기</h3>
                                     <br><br><br>
                                 </div>
@@ -859,6 +859,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="./start/js/start.js" charset="utf-8"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
