--- a/start/test.html
+++ b/start/test.html
@@ -95,17 +95,24 @@
       <section id="result" class="page-section bg-light">
         <div class="container">
           <div class="text-center">
-            <h1>당신에게 맞는 운동 종목은?</h1>
+            
               <div class="resultname">
 
               </div>
               <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
 
               </div>
-              <!-- <div class="resultDesc">
+              <div class="resultDesc1">
 
-              </div> -->
-              <h2> 종목 소개</h2>
+              </div> 
+              <div class="resultDesc2">
+                <br><h2> 주의 사항</h2>
+
+              </div> 
+              <div class="resultDesc3">
+                <br><h2> 부상을 예방하기 위한 팁</h2>
+              </div> 
+              <!-- <h2> 종목 소개</h2>
               <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
               <br>
               <h2> 주의 사항</h2>
@@ -113,9 +120,9 @@
               <br>
               <h2> 부상을 예방하기 위한 팁</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti magnam perferendis, veritatis iusto incidunt molestias vitae! Dolore explicabo neque quis ut, placeat obcaecati temporibus! Impedit, ratione. Ea qui tempore labore?</p>
-              <br>
+              <br> -->
 
-            <button type="button" onclick="js:kakaoShare()" class="kakao mt-3 py-2 px-3">공유하기</button>
+            <!-- <button type="button" onclick="js:kakaoShare()" class="kakao mt-3 py-2 px-3">공유하기</button> -->
             <button type="button" onclick="js:kakaoShare()" class="kakao mt-3 py-2 px-3">더 알아보기</button>
 
           </div>
