--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -32,27 +32,29 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="start/test.html">Start Test</a></li>
-                        <li class="nav-item"><a class="nav-link" href="detail.html">Detailed Info</a></li>
+                        <li class="nav-item"><a class="nav-link" href="detail.html">Detail Info</a></li>
                         <!-- <li class="nav-item"><a class="nav-link"  href="about.html">Facilities</a></li>
                          -->
                     </ul>
                 </div>
             </div>
         </nav>
-        <section class="page-section" id="about">
+        <section class="page-section" id="services2">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About EXTART</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
                 
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">서비스 소개</h2>
+                    <!-- <h3 class="section-subheading text-muted">EXTART를 소개합니다!</h3> -->
+                </div>
+            </div>
+        </section>       
             </div>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2022</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; EXTART 2022</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
