--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -32,7 +32,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="start/test.html">Start Test</a></li>
-                        <li class="nav-item"><a class="nav-link" href="detail.html">Detailed Info</a></li>                       
+                        <li class="nav-item"><a class="nav-link" href="detail.html">Detail Info</a></li>                       
                     </ul>
                 </div>
             </div>
@@ -45,12 +45,13 @@
                     <div class="row text-center">
                         <div class="col-lg-10 col-sm-10 mb-10">
                             <h2 class="section-heading text-center text-uppercase">운동 종목에 대해 알아보자</h2>
+                            <br><br>
                         </div>
                         <div class="arrow section-heading col-lg-2 col-sm-2 mb-2">
-                            <a href="detail.html"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                            <!-- <a href="detail.html"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            
                     
                 </div>
                 <div class="row">
@@ -199,7 +200,7 @@
          <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2022</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; EXTART 2022</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -282,7 +283,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>      
@@ -346,7 +347,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
@@ -404,7 +405,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
@@ -476,7 +477,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
@@ -531,7 +532,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
@@ -601,7 +602,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
@@ -668,7 +669,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
@@ -800,7 +801,7 @@
                             <div class="modal-body text-center">
                                  <button class="btn btn-primary btn-xl text-center text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                     Close Project
+                                     Close
                                     </button>
                              </div>          
                          </div>
