--- a/about.html
+++ b/about.html
@@ -44,6 +44,8 @@
                 
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">서비스 소개</h2>
+                    <img src="./assets/img/intro.png" class="img-fluid intro" alt="...">
+                    
                     <!-- <h3 class="section-subheading text-muted">EXTART를 소개합니다!</h3> -->
                 </div>
             </div>
