--- a/start/test.html
+++ b/start/test.html
@@ -58,15 +58,20 @@
 
       <section id="main" class="page-section">
         <div class="container">
-          <div class="text-center">
+          <div class="text-center test">
               <h1>운동종목 추천테스트</h1>
-              <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <!-- <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
                   <img src="./img/main.png" alt="mainImage" class="img-fluid">
-              </div>
-              <h3>
+              </div> -->
+              <!-- <h3>
                 운동 종목 추천 테스트를 시작하겠습니다! <br>
                 아래 시작하기 버튼을 누르세요
-              </h3>
+              </h3> -->
               
               <button type="button" class="mt-5 btn-xl btn-primary" onclick="js:begin()">시작하기</button>
 
