--- a/about.html
+++ b/about.html
@@ -30,11 +30,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="start/test.html">Start Test</a></li>
-                        <li class="nav-item"><a class="nav-link" href="detail.html">Detail Info</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link"  href="about.html">Facilities</a></li>
-                         -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="start/test.html"
+                              >Start Test</a
+                            >
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="detail.html">Detail Info</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="geolocation.html">Facilities</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
