--- a/start/test.html
+++ b/start/test.html
@@ -50,6 +50,7 @@
                   <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
                   <li class="nav-item"><a class="nav-link" href="./test.html">Start Test</a></li>
                   <li class="nav-item"><a class="nav-link" href="../detail.html">Detail Info</a></li>
+                  <li class="nav-item"><a class="nav-link" href="../geolocation.html">Facilities</a></li>
                    
                 </ul>
             </div>
@@ -130,9 +131,9 @@
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti magnam perferendis, veritatis iusto incidunt molestias vitae! Dolore explicabo neque quis ut, placeat obcaecati temporibus! Impedit, ratione. Ea qui tempore labore?</p>
               <br> -->
 
-            <!-- <button type="button" onclick="js:kakaoShare()" class="kakao mt-3 py-2 px-3">공유하기</button> -->
-            <a href="../detail.html"><button type="button" class="kakao mt-3 py-2 px-3">더 알아보기</button></a>
-            <!-- <a class="btn btn-primary btn-xl text-uppercase" target=_blank href="start/test.html">테스트 하러가기</a> -->
+            
+            <a href="../detail.html"> 
+              <button type="button" id="pageMove" class="kakao mt-3 py-2 px-3">더 알아보기</button></a>
             <a href="test.html"><button type="button" class="kakao mt-3 py-2 px-3">다시하기</button></a>
 
           </div>
