--- a/detail.html
+++ b/detail.html
@@ -30,9 +30,20 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="start/test.html">Start Test</a></li>
-                        <li class="nav-item"><a class="nav-link" href="detail.html">Detail Info</a></li>                       
+                      <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" target="_blank" href="start/test.html"
+                          >Start Test</a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="detail.html">Detail Info</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="geolocation.html">Facilities</a>
+                    </li>                    
                     </ul>
                 </div>
             </div>
@@ -314,6 +325,7 @@
                 사람
               </p>
             </div>
+            <h3><a href="./geolocation/swim.html">주변 시설 보기</a></h3>
           </div>
           <!-- 
   
@@ -428,6 +440,7 @@
                 칠 때는 라켓을 쥔 팔의 상완부, 손목에 가는 부담이 증가하게
                 됩니다. 따라서 하체와 상완부 위주로 스트레칭을 하도록 합니다.
               </p>
+              <h3><a href="./geolocation/tennis.html">주변 시설 보기</a></h3>
             </div>
           </div>
           <div class="row justify-content-center">
@@ -526,6 +539,7 @@
               </p>
 
               <br /><br /><br />
+              <h3><a href="./geolocation/golf.html">주변 시설 보기</a></h3>
             </div>
           </div>
 
@@ -648,6 +662,7 @@
             </p>
 
             <br /><br /><br />
+            <h3><a href="./geolocation/boxing.html">주변 시설 보기</a></h3>
           </div>
 
           <div class="row justify-content-center">
@@ -717,6 +732,7 @@
                 돌입하지 말고 드리블, 패스, 슈팅 등의 기초기술 연습을 약
                 5분∼10분 정도 한 다음에 실시하도록 합니다.
               </p>
+              <h3><a href="./geolocation/soccer.html">주변 시설 보기</a></h3>
             </div>
 
             <div class="col-6 pic">
@@ -853,6 +869,7 @@
                 괜찮은 경우가 있을 수 있으니 반드시 의사의 소견에 따라 운동의
                 여부를 결정하도록 하세요.
               </p>
+              <h3><a href="./geolocation/climbing.html">주변 시설 보기</a></h3>
             </div>
           </div>
 
@@ -972,6 +989,7 @@
                 걷는 연습을 하며, 걷는 것이 무리가 없다면 복근을 단련하는
                 필라테스 동작을 조금씩 시도할 수 있어요.
               </p>
+              <h3><a href="./geolocation/pilates.html">주변 시설 보기</a></h3>
             </div>
           </div>
           <div class="row justify-content-center">
@@ -1072,6 +1090,7 @@
               허술한데 겨우 버티고 있는 중심마저 무너뜨리는 결과를 초래할 수
               있어 피하는 것을 추천드립니다.
             </p>
+            <h3><a href="./geolocation/crossfit.html">주변 시설 보기</a></h3>
           </div>
 
           <div class="row justify-content-center">
@@ -1205,6 +1224,7 @@
               휠자세도 비대칭적인 척추측만증 환자에게 무리가 오기 때문에
               피하세요.
             </p>
+            <h3><a href="./geolocation/yoga.html">주변 시설 보기</a></h3>
           </div>
         
         <div class="row justify-content-center">
