--- a/geolocation/golf.html
+++ b/geolocation/golf.html
@@ -34,14 +34,14 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="../css/styles.css" rel="stylesheet" />
 </head>
 <body id="page-top" bgproperties="fixed">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="..."
+          <a class="navbar-brand" href="../index.html"
+            ><img src="../assets/img/logo.png" alt="..."
           /></a>
           <button
             class="navbar-toggler"
@@ -58,18 +58,18 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="../about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="start/test.html"
+                <a class="nav-link" target="_blank" href="../start/test.html"
                   >Start Test</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="detail.html">Detail Info</a>
+                <a class="nav-link" href="../detail.html">Detail Info</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="geolocation.html">Facilities</a>
+                <a class="nav-link" href="../geolocation.html">Facilities</a>
             </li>
             </ul>
           </div>
@@ -82,15 +82,16 @@
         <div class = "category text-center align-items-center">
           <ul id="navi">
             <h3>운동 종목</h3>
-            <li class="group"><a href="./geolocation/golf.html">골프</a></li>
-            <li class="group"><a href="./geolocation/tennis.html">테니스</a></li>
-            <li class="group"><a href="./geolocation/swim.html">수영</a></li>
-            <li class="group"><a href="./geolocation/soccer.html">축구</a></li>
-            <li class="group"><a href="./geolocation/crossfit.html">크로스핏</a></li>
-            <li class="group"><a href="./geolocation/climbing.html">클라이밍</a></li>
-            <li class="group"><a href="./geolocation/pilates.html">필라테스</a></li>
-            <li class="group"><a href="./geolocation/boxing.html">복싱</a></li>
-            <li class="group""><a href="./geolocation/yoga.html">요가</a></li>
+      
+            <li class="group" id="golf"><a href="./golf.html">골프</a></li>
+            <li class="group" ><a href="./tennis.html">테니스</a></li>
+            <li class="group" ><a href="./swim.html">수영</a></li>
+            <li class="group" ><a href="./soccer.html">축구</a></li>
+            <li class="group" ><a href="./crossfit.html">크로스핏</a></li>
+            <li class="group" ><a href="./climbing.html">클라이밍</a></li>
+            <li class="group" ><a href="./pilates.html">필라테스</a></li>
+            <li class="group"><a href="./boxing.html">복싱</a></li>
+            <li class="group" ><a href="./yoga.html">요가</a></li>
           </ul>
 
         </div>
@@ -106,7 +107,7 @@
               <div class="option">
                   <div>
                       <form onsubmit="searchPlaces(); return false;">
-                          키워드 : <input type="text" value="운동시설" id="keyword" size="15"> 
+                          키워드 : <input type="text" value="골프" id="keyword" size="15"> 
                           <button type="submit">검색하기</button> 
                       </form>
                   </div>
@@ -165,9 +166,9 @@
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58650b299d586a00238bc074a1cf4bcb&libraries=services"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <script src="js/map.js"></script>
-    <script src="./start/js/start.js" charset="utf-8"></script>
+    <script src="../js/scripts.js"></script>
+    <script src="../js/map.js"></script>
+    <script src="../start/js/start.js" charset="utf-8"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
 </body>
