--- a/geolocation.html
+++ b/geolocation.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58650b299d586a00238bc074a1cf4bcb&libraries=services,clusterer"></script>
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
@@ -125,7 +125,7 @@
         <footer class="footer py-4">
           <div class="container">
             <div class="row align-items-center footerimg text-center">
-              <img src="../assets/img/logo3.png" style="width:auto; height:25px;">
+              <img src="./assets/img/logo3.png" style="width:auto; height:25px;">
              
             </div>
             <hr>
