--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>EXTART - 운동 종목 추천 서비스</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -283,7 +283,7 @@
           <footer class="footer py-4">
             <div class="container">
               <div class="row align-items-center footerimg text-center">
-                <img src="../assets/img/logo3.png" style="width:auto; height:25px;">
+                <img src="./assets/img/logo3.png" style="width:auto; height:25px;">
                
               </div>
               <hr>
