--- a/geolocation/tennis.html
+++ b/geolocation/tennis.html
@@ -53,7 +53,7 @@
                        <a class="nav-link" href="../about.html">About</a>
                      </li>
                      <li class="nav-item">
-                       <a class="nav-link" href="test.html"
+                       <a class="nav-link" href="../start/test.html"
                          >Start Test</a
                        >
                      </li>
