--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ></script>
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
@@ -307,7 +307,7 @@
         <footer class="footer py-4">
           <div class="container">
             <div class="row align-items-center footerimg text-center">
-              <img src="../assets/img/logo3.png" style="width:auto; height:25px;">
+              <img src="./assets/img/logo3.png" style="width:auto; height:25px;">
              
             </div>
             <hr>
