--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="buttons"></div>
       </div>
       <!-- Navigation-->
-      <div class="container-head1">
+      <div class="container container-head1">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-          <a class="navbar-brand" href="index.html"
-            ><img src="assets/img/logo.png" alt="..."
+          <a class="navbar-brand me-2" href="index.html"
+            ><img src="assets/img/logo2.png" alt="..."
           /></a>
           <button
             class="navbar-toggler"
@@ -72,19 +72,19 @@
             Menu
             <i class="fas fa-bars ms-1"></i>
           </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto py-4 py-lg-0 mainnavlink">
+          <div class="ms-5 collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-5 py-4 py-lg-0 mainnavlink">
               <li class="nav-item ">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="about.html">서비스 소개</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="start/test.html" >Start Test</a>
+                <a class="nav-link" href="start/test.html" >운동 추천받기</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="detail.html">Detail Info</a>
+                <a class="nav-link" href="detail.html">운동 알아보기</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="geolocation.html" >Facilities</a>
+                <a class="nav-link" href="geolocation.html" >시설 알아보기</a>
               </li>
             </ul>
           </div>
