--- a/detail.html
+++ b/detail.html
@@ -22,40 +22,40 @@
     <body id="page-top">
        <!-- Navigation-->
        <div class="bannerimg">
-       <div class="container-head">
+       <div class="container container-head">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
           
-              <a class="navbar-brand" href="index.html"><img src="assets/img/logo2.png" alt="..." /></a>
+              <a class="navbar-brand me-2" href="index.html"><img src="assets/img/logo2.png" alt="..." /></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   Menu
                   <i class="fas fa-bars ms-1"></i>
               </button>
-              <div class="collapse navbar-collapse" id="navbarResponsive">
-                  <ul class="navbar-nav ms-auto py-4 py-lg-0">
+              <div class="ms-5 collapse navbar-collapse" id="navbarResponsive">
+                  <ul class="navbar-nav ms-5 py-4 py-lg-0">
                       <li class="nav-item">
-                          <a class="nav-link" href="about.html">About</a>
+                          <a class="nav-link" href="about.html">서비스 소개</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"  href="start/test.html"
-                            >Start Test</a
+                            >운동 추천받기</a
                           >
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="detail.html">Detail Info</a>
+                          <a class="nav-link" href="detail.html">운동 알아보기</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="geolocation.html">Facilities</a>
+                          <a class="nav-link" href="geolocation.html">시설 알아보기</a>
                       </li>
                       
                   </ul>
               </div>
-          </div>
-        </div>
       </nav>
+    </div>
+    </div>
        <!-- Exercise Grid-->
     <!-- bg-light -->
     <section class="page-section" id="portfolio">
-      <div class="container-head2">
+      <div class="container">
         <div class="text-center">
           <div class="row text-center">
             <div class="col-lg-10 col-sm-10 mb-10">
