--- a/detail.html
+++ b/detail.html
@@ -53,11 +53,11 @@
     <!-- bg-light -->
     <br><br>
     <section class="page-section mt-lg-5" id="portfolio" style="margin-top:5rem !important;padding-top:5rem !important;">
-      <div class="container-head2">
+      <div class="container-head2_1">
         <div class="text-center">
           <div class="row text-center">
             <div class="col-lg-10 col-sm-10 mb-10">
-              <h2 class="section-heading text-center text-uppercase">
+              <h2 class="section-heading text-center text-uppercase" style="color:#FFFFFF; padding-left:1%;">
                 운동 종목에 대해 알아보자
               </h2>
             </div>
@@ -68,8 +68,8 @@
             </div> -->
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-sm-6">
+        <div class="row detail">
+          <div class="col-lg-4 col-sm-6 ">
             <!-- Exercise item 1-->
             <div class="portfolio-item">
               <a
