--- a/start/test.html
+++ b/start/test.html
@@ -76,7 +76,7 @@
               <img src="../assets/img/testimg.png" width="350px" style="text-align: center;">
               <br>
               
-              <button type="button" class="mt-5 btn-xl stbtn" onclick="js:begin()">시작하기</button>
+              <button class="mt-5 btn-xl btn stbtn" onclick="js:begin()">시작하기</button>
 
             
           </div>
