--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="text-center">
           <div class="row text-center">
             <div class="col-lg-10 col-sm-10 mb-10">
-              <h2 class="section-heading text-center text-uppercase">
+              <h2 class="section-heading text-center text-uppercase" style="padding-left:1%;">
                 운동 종목에 대해 알아보자
               </h2>
             </div>
