[fix] src error

--- a/geolocation.html
+++ b/geolocation.html
@@ -92,9 +92,9 @@
               top: 99px;
             "
           >
-            <a href="../index.html"
+            <a href="./index.html"
               ><img
-                src="../assets/img/LOGO1.png"
+                src="./assets/img/LOGO1.png"
                 alt="..."
                 style="
                   position: absolute;
@@ -124,7 +124,7 @@
               <li class="nav-item" style="position: absolute; left: 0px">
                 <a
                   class="nav-link"
-                  href="../about.html"
+                  href="./about.html"
                   style="
                     position: absolute;
                     width: 180px;
@@ -141,7 +141,7 @@
               <li class="nav-item" style="position: absolute; left: 180px">
                 <a
                   class="nav-link"
-                  href="../start/test.html"
+                  href="./start/test.html"
                   style="
                     position: absolute;
                     width: 1153px;
@@ -160,7 +160,7 @@
               <li class="nav-item" style="position: absolute; left: 360px">
                 <a
                   class="nav-link"
-                  href="../detail.html"
+                  href="./detail.html"
                   style="
                     position: absolute;
                     width: 153px;
@@ -179,7 +179,7 @@
               <li class="nav-item" style="position: absolute; left: 540px">
                 <a
                   class="nav-link"
-                  href="../geolocation.html"
+                  href="./geolocation.html"
                   style="
                     position: absolute;
                     width: 153px;
