--- a/geolocation/tennis.html
+++ b/geolocation/tennis.html
@@ -13,8 +13,8 @@
     ></script>
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="./assets/icon2.png" />
-    <link rel="icon" type="image/x-icon" href="./assets/icon2.ico" />
+    <link rel="icon" type="image/x-icon" href="../assets/icon2.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/icon2.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
@@ -39,15 +39,15 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../css/styles.css" rel="stylesheet" />
-    <link href="css/slick.css" rel="stylesheet" />
-    <link href="css/slick-theme.css" rel="stylesheet" />
+    <link href="../css/slick.css" rel="stylesheet" />
+    <link href="../css/slick-theme.css" rel="stylesheet" />
   </head>
   <body
     id="page-top"
     style="
       position: relative;
       width: 1920px;
-      height: 1258px;
+      height: 922px;
 
       background: #ffffff;
     "
@@ -57,7 +57,7 @@
       style="
         position: absolute;
         width: 1920px;
-        height: 1258px;
+        height: 922px;
         left: 0px;
         top: 0px;
 
@@ -203,13 +203,15 @@
         <div class="container-head3">
           <div
             class="row"
-            style="position: absolute; top: 273px; left: 364px; right: 242px"
+            style="position: absolute; top: 203px; left: 364px; right: 242px"
           >
             <div class="col-2 col-lg-2 col-sm-2" id="categories">
               <div class="category">
                 <h3>운동 종목</h3>
                 <ul id="navi">
-                  <li class="group"><a href="./golf.html">골프</a></li>
+                  <li class="group">
+                    <a href="./golf.html">골프</a>
+                  </li>
                   <li class="group" id="tennis">
                     <a href="./tennis.html">테니스</a>
                   </li>
@@ -218,7 +220,9 @@
                   <li class="group"><a href="./crossfit.html">크로스핏</a></li>
                   <li class="group"><a href="./climbing.html">클라이밍</a></li>
                   <li class="group"><a href="./pilates.html">필라테스</a></li>
-                  <li class="group"><a href="./boxing.html">복싱</a></li>
+                  <li class="group">
+                    <a href="./boxing.html">복싱</a>
+                  </li>
                   <li class="group"><a href="./yoga.html">요가</a></li>
                 </ul>
               </div>
@@ -264,7 +268,7 @@
         position: absolute;
         width: 1920px;
         height: 218px;
-        top: 1258px;
+        top: 922px;
         left: 0px;
       "
     >
