--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     id="page-top"
     style="
       position: relative;
-      width: 1920px;
+      /* width: 1920px; */
       /* height: 3000px; */
       padding-right: 0px !important;
       background: #ffffff;
@@ -393,7 +393,7 @@
                 <div class="portfolio-hover"></div>
                 <img
                   class="img-fluid"
-                  src="assets/img/sports/sports/복싱2.jpg"
+                  src="./assets/img/sports/sports/복싱.jpg"
                   alt="..."
                 />
               </a>
@@ -423,7 +423,7 @@
                 <div class="portfolio-hover"></div>
                 <img
                   class="img-fluid"
-                  src="assets/img/sports/sports/축구2.jpg"
+                  src="assets/img/sports/sports/축구.jpg"
                   alt="..."
                 />
               </a>
