[refactor] code refactor

--- a/detail.html
+++ b/detail.html
@@ -6,9 +6,22 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>EXTART - 운동 종목 추천 서비스</title>
+    <meta name="keywords" content="운동 종목 추천 서비스" />
+    <meta name="description" content="운동 종목 추천 서비스" />
+    <meta content="운동 알아보기 페이지" />
+    <meta name="og:site_name" content="EXTART" />
+    <meta name="og:title" content="EXTART - 운동 종목 추천 서비스" />
+    <meta
+      name="og:description"
+      content="운동 초보자들을 위한 운동 종목 추천 서비스 EXTART입니다"
+    />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://extart.swygbro.com" />
+    <meta
+      name="og:image"
+      content="https://extart.swygbro.com/assets/img/mainorg.png"
+    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="./assets/icon2.png" />
     <link rel="icon" type="image/x-icon" href="./assets/icon2.ico" />
