--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="author" content="YenaLee" />
-    <meta name="keywords" content="운동종목 추천테스트" />
-    <meta name="description" content="운동종목 추천테스트" />
     <title>EXTART - 운동 종목 추천 서비스</title>
+    <meta name="keywords" content="운동 종목 추천 서비스" />
+    <meta name="description" content="운동 종목 추천 서비스" />
+    <meta content="메인 페이지" />
+    <meta name="og:site_name" content="EXTART" />
+    <meta name="og:title" content="EXTART - 운동 종목 추천 서비스" />
+    <meta
+      name="og:description"
+      content="운동 초보자들을 위한 운동 종목 추천 서비스 EXTART입니다"
+    />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://extart.swygbro.com" />
+    <meta
+      name="og:image"
+      content="https://extart.swygbro.com/assets/img/mainorg.png"
+    />
+
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58650b299d586a00238bc074a1cf4bcb&libraries=services,clusterer"
@@ -192,7 +206,7 @@
                     display: flex;
                     align-items: center;
                     text-align: center;
-
+                    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.65));
                     color: #1fff79;
                   "
                   >시설 알아보기</a
