--- a/start/test.html
+++ b/start/test.html
@@ -4,22 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="author" content="YenaLee" />
-    <meta name="keywords" content="운동종목 추천테스트" />
-    <meta name="description" content="운동종목 추천테스트" />
-    <!--sns share-->
+    <title>EXTART - 운동 종목 추천 서비스</title>
+    <meta name="keywords" content="운동 종목 추천 서비스" />
+    <meta name="description" content="운동 종목 추천 서비스" />
+    <meta content="운동 추천받기 페이지" />
+    <meta name="og:site_name" content="EXTART" />
+    <meta name="og:title" content="EXTART - 운동 종목 추천 서비스" />
     <meta
-      property="og:url"
-      content="https://meek-hummingbird0512.netlify.app"
+      name="og:description"
+      content="운동 초보자들을 위한 운동 종목 추천 서비스 EXTART입니다"
     />
-    <meta property="og:title" content="운동종목 추천테스트" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="./img/share.png" />
-    <meta property="og:description" content="운동종목 추천테스트" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://extart.swygbro.com" />
+    <meta
+      name="og:image"
+      content="https://extart.swygbro.com/assets/img/mainorg.png"
+    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="../assets/icon2.png" />
     <link rel="icon" type="image/x-icon" href="../assets/icon2.ico" />
 
-    <title>EXTART - 운동종목 추천테스트</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
