--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     />
 
     <script
+      defer
+      src="https://cdn.swygbro.com/public/widget/swyg-widget.js"
+    ></script>
+    <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58650b299d586a00238bc074a1cf4bcb&libraries=services,clusterer"
     ></script>
