--- a/about.html
+++ b/about.html
@@ -22,6 +22,10 @@
       name="og:image"
       content="https://extart.swygbro.com/assets/img/mainorg.png"
     />
+    <script
+      defer
+      src="https://cdn.swygbro.com/public/widget/swyg-widget.js"
+    ></script>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="./assets/icon2.png" />
     <link rel="icon" type="image/x-icon" href="./assets/icon2.ico" />
@@ -46,6 +50,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Serif+KR&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/font-applesdgothicneo@1.0/all.min.css"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
@@ -196,49 +204,50 @@
       <p
         style="
           position: absolute;
-          width: 695px;
-          height: 166px;
-          left: 604px;
+          width: 804px;
+          height: 128px;
+          left: 549px;
           top: 467px;
 
-          font-family: 'Shilla_Gothic-Bold';
+          font-family: 'AppleSDGothicNeo', 'Noto Sans KR', sans-serif;
           font-style: normal;
           font-weight: 700;
-          font-size: 32px;
-          line-height: 42px;
+          font-size: 30px;
+          line-height: 50px;
           text-align: center;
 
           color: #17ff75;
         "
       >
-        한가지 운동을 꾸준히 한 적이 없던 사람<br /><br />
-        건강 때문에 아무 운동이나 무작정 시작하기 어려운 사람<br /><br />
-        여러 운동 종목들 사이에서 방황했던 사람 <br /><br />
+        운동에 재미 붙이기 어려운건 내가 게으름뱅이라서일까?<br />나에게 잘 맞는
+        운동을 찾기 어려웠을 뿐 나도 꾸준히 운동할 수 있어! <br />나에게 맞는
+        운동을 추천해줘!<br /><br />
       </p>
       <p
         style="
           position: absolute;
           width: 1098px;
-          height: 212px;
+          height: 173px;
           left: 402px;
-          top: 725px;
+          top: 687px;
 
           font-family: 'Apple SD Gothic Neo';
           font-style: normal;
           font-weight: 700;
           font-size: 28px;
-          line-height: 30px;
+          line-height: 45px;
           text-align: center;
           text-transform: capitalize;
 
           /* main color */
 
-          color: #17ff75;
+          color: #ffffff;
         "
       >
-        <br />운동에 재미 붙이기 어려운건 내가 게으름뱅이라서일까?<br /><br />나에게
-        잘 맞는 운동을 찾기 어려웠을 뿐 나도 꾸준히 운동할 수 있어!
-        <br /><br />나에게 맞는 운동을 추천해줘!<br /><br />
+        <br />
+        한가지 운동을 꾸준히 한 적이 없던 사람<br />
+        건강 때문에 아무 운동이나 무작정 시작하기 어려운 사람<br />
+        여러 운동 종목들 사이에서 방황했던 사람 <br />.<br />.<br />
       </p>
       <p
         style="
@@ -258,8 +267,8 @@
           color: #ffffff;
         "
       >
-        <br />안녕하세요. 운동을 막 시작하는 비기너들을 위한 맞춤형 운동 추천
-        서비스 EXTART 입니다. <br />
+        <br /><br />안녕하세요. 운동을 막 시작하는 비기너들을 위한 맞춤형 운동
+        추천 서비스 EXTART 입니다. <br />
         #오운완 #헬시플레저 와 같이 건강을 위해 운동하는 것이 트렌드로 자리잡은
         이 시기에도, <br />사람들이 유행하는 운동 위주로 한정적인 정보를
         얻는데서 출발했습니다. <br /><br />사람들이 저마다 다른 이유로 운동을
