--- a/detail.html
+++ b/detail.html
@@ -22,6 +22,10 @@
       name="og:image"
       content="https://extart.swygbro.com/assets/img/mainorg.png"
     />
+    <script
+      defer
+      src="https://cdn.swygbro.com/public/widget/swyg-widget.js"
+    ></script>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="./assets/icon2.png" />
     <link rel="icon" type="image/x-icon" href="./assets/icon2.ico" />
