--- a/detail.html
+++ b/detail.html
@@ -20,7 +20,7 @@
     <meta name="og:url" content="https://extart.swygbro.com" />
     <meta
       name="og:image"
-      content="https://extart.swygbro.com/assets/img/mainorg.png"
+      content="https://extart.swygbro.com/assets/thumbnail.png"
     />
     <script
       defer
