--- a/geolocation/climbing.html
+++ b/geolocation/climbing.html
@@ -18,7 +18,7 @@
     <meta name="og:url" content="https://extart.swygbro.com" />
     <meta
       name="og:image"
-      content="https://extart.swygbro.com/assets/img/mainorg.png"
+      content="https://extart.swygbro.com/assets/thumbnail.png"
     />
     <script
       type="text/javascript"
